--- a/src/components/pages/RootLayout.module.css
+++ b/src/components/pages/RootLayout.module.css
@@ -4,4 +4,11 @@
   max-width: 600px;
   width: 100%;
   border-inline: 1px solid rgb(194, 192, 192);
+  max-height: 100vh;
+  overflow-y: scroll;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  &::-webkit-scrollbar {
+    display: none; /* Hide scrollbar for Chrome, Safari and Opera */
+  }
 }
